[package]
name = "balls"
version = "0.1.0"
authors = ["roughdraftofme <brandy.king@knights.ucf.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
SmolECS = {git = "https://github.com/MultiCoreECS/SmolECS"}
rand = "0.7.3"
clap = "2.33.3"
